@@ -1,20 +1,21 @@
 package com.xenoage.zong.io.musicxml.in.readers;
 
-import static com.xenoage.utils.base.NullUtils.notNull;
-import static com.xenoage.utils.base.collections.CollectionUtils.map;
+import static com.xenoage.utils.NullUtils.notNull;
+import static com.xenoage.utils.collections.CollectionUtils.alist;
+import static com.xenoage.utils.collections.CollectionUtils.map;
 import static com.xenoage.utils.kernel.Tuple2.t;
 import static com.xenoage.utils.log.Log.log;
 import static com.xenoage.utils.log.Report.warning;
-import static com.xenoage.utils.pdlib.PVector.pvec;
 
 import java.util.HashMap;
+import java.util.List;
 
-import com.xenoage.utils.base.annotations.MaybeEmpty;
+import com.xenoage.utils.annotations.MaybeEmpty;
+import com.xenoage.utils.annotations.NonNull;
 import com.xenoage.utils.kernel.Tuple2;
 import com.xenoage.utils.math.MathUtils;
-import com.xenoage.utils.pdlib.PVector;
 import com.xenoage.zong.core.instrument.Instrument;
-import com.xenoage.zong.core.instrument.InstrumentBase;
+import com.xenoage.zong.core.instrument.InstrumentData;
 import com.xenoage.zong.core.instrument.PitchedInstrument;
 import com.xenoage.zong.core.instrument.Transpose;
 import com.xenoage.zong.core.instrument.UnpitchedInstrument;
@@ -29,7 +30,6 @@ import com.xenoage.zong.musicxml.types.choice.MxlMusicDataContent.MxlMusicDataCo
 import com.xenoage.zong.musicxml.types.partwise.MxlMeasure;
 import com.xenoage.zong.musicxml.types.partwise.MxlPart;
 
-
 /**
  * This class reads the {@link Instrument}s from a
  * given {@link MxlScorePart}.
@@ -42,163 +42,133 @@ import com.xenoage.zong.musicxml.types.partwise.MxlPart;
  * 
  * @author Andreas Wenger
  */
-public final class InstrumentsReader
-{
-	
+public final class InstrumentsReader {
+
 	/**
 	 * Reads the instruments from the given {@link ScorePart}.
 	 * Not only the header ({@link MxlScorePart})
 	 * must be given, but also the contents ({@link MxlPart}),
 	 * which is needed to find transposition information.
 	 */
-	@MaybeEmpty public static PVector<Instrument> read(MxlScorePart mxlScorePart,
-		MxlPart mxlPart)
-	{
-		PVector<Instrument> ret = pvec();
-		PVector<MxlScoreInstrument> mxlInstr = mxlScorePart.getScoreInstruments();
-    //score-instrument elements
-    HashMap<String, Tuple2<String, String>> instrumentBaseValues = map();
-    for (MxlScoreInstrument mxlScoreInstr : mxlInstr)
-    {
-    	String id = mxlScoreInstr.getID();
-    	String name = mxlScoreInstr.getInstrumentName(); //never null
-    	String abbr = mxlScoreInstr.getInstrumentAbbreviation();
-    	instrumentBaseValues.put(id, t(name, abbr));
-    }
-    //find transposition information
-    HashMap<String, MxlTranspose> instrumentTranspositions = map();
-    if (mxlInstr.size() == 1)
-    {
-    	//only one instrument: find transposition (if any) in first attributes of first measure
-    	instrumentTranspositions.put(mxlInstr.getFirst().getID(), findFirstTranspose(mxlPart));
-    }
-    else if (mxlInstr.size() > 1)
-    {
-    	//more than one instrument in this part:
-    	//for each instrument, find its first note and the last transposition change before
-    	//that note
-    	for (MxlScoreInstrument mxlScoreInstr : mxlInstr)
-    	{
-    		instrumentTranspositions.put(mxlScoreInstr.getID(),
-    			findLastTransposeBeforeFirstNote(mxlPart, mxlScoreInstr.getID()));
-    	}
-    }
-    //midi-instrument elements
-    for (MxlMidiInstrument mxlMidiInstr : mxlScorePart.getMidiInstruments())
-    {
-      String id = mxlMidiInstr.id;
-      Tuple2<String, String> baseValues = instrumentBaseValues.get(id);
-      if (baseValues == null)
-      {
-      	log(warning("Unknown midi-instrument: " + id));
-      	continue;
-      }
-      Integer midiChannel = mxlMidiInstr.midiChannel;
-      
-      //global volume
-      Float volume = mxlMidiInstr.volume;
-      if (volume != null)
-      	volume /= 100f; //to 0..1
-      
-      //global panning
-      Float pan = mxlMidiInstr.pan;
-      if (pan != null)
-      {
-      	if (pan > 90)
-      		pan = 90 - (pan - 90); //e.g. convert 120° to 60°
-      	else if (pan < -90)
-      		pan = -90 - (pan + 90); //e.g. convert -120° to -60°
-      	pan /= 90f; //to -1..1
-      }
-      
-      InstrumentBase base = new InstrumentBase(id, baseValues.get1(),
-      	baseValues.get2(), null, volume, pan);
-      if (midiChannel != null && midiChannel.equals(10))
-      {
-      	//unpitched instrument
-      	ret = ret.plus(new UnpitchedInstrument(base));
-      }
-      else
-      {
-      	//pitched instrument
-      	//midi-program is 1-based in MusicXML but 0-based in MIDI
-      	int midiProgram = notNull(mxlMidiInstr.midiProgram, 1) - 1; //TODO: find value that matches instrument name
-      	midiProgram = MathUtils.clamp(midiProgram, 0, 127);
-      	Transpose transpose = readTranspose(instrumentTranspositions.get(id));
-      	ret = ret.plus(new PitchedInstrument(
-      		base, midiProgram, transpose, null, null, 0));
-      }
-    }
-    return ret;
+	@MaybeEmpty public static List<Instrument> read(MxlScorePart mxlScorePart, MxlPart mxlPart) {
+		List<Instrument> ret = alist();
+		List<MxlScoreInstrument> mxlInstr = mxlScorePart.getScoreInstruments();
+		//score-instrument elements
+		HashMap<String, Tuple2<String, String>> instrumentBaseValues = map();
+		for (MxlScoreInstrument mxlScoreInstr : mxlInstr) {
+			String id = mxlScoreInstr.getId();
+			@NonNull String name = mxlScoreInstr.getInstrumentName();
+			String abbr = mxlScoreInstr.getInstrumentAbbreviation();
+			instrumentBaseValues.put(id, t(name, abbr));
+		}
+		//find transposition information
+		HashMap<String, MxlTranspose> instrumentTranspositions = map();
+		if (mxlInstr.size() == 1) {
+			//only one instrument: find transposition (if any) in first attributes of first measure
+			instrumentTranspositions.put(mxlInstr.get(0).getId(), findFirstTranspose(mxlPart));
+		}
+		else if (mxlInstr.size() > 1) {
+			//more than one instrument in this part:
+			//for each instrument, find its first note and the last transposition change before
+			//that note
+			for (MxlScoreInstrument mxlScoreInstr : mxlInstr) {
+				instrumentTranspositions.put(mxlScoreInstr.getId(),
+					findLastTransposeBeforeFirstNote(mxlPart, mxlScoreInstr.getId()));
+			}
+		}
+		//midi-instrument elements
+		for (MxlMidiInstrument mxlMidiInstr : mxlScorePart.getMidiInstruments()) {
+			String id = mxlMidiInstr.id;
+			Tuple2<String, String> baseValues = instrumentBaseValues.get(id);
+			if (baseValues == null) {
+				log(warning("Unknown midi-instrument: " + id));
+				continue;
+			}
+			Integer midiChannel = mxlMidiInstr.getMidiChannel();
+
+			//global volume
+			Float volume = mxlMidiInstr.getVolume();
+			if (volume != null)
+				volume /= 100f; //to 0..1
+
+			//global panning
+			Float pan = mxlMidiInstr.getPan();
+			if (pan != null) {
+				if (pan > 90)
+					pan = 90 - (pan - 90); //e.g. convert 120° to 60°
+				else if (pan < -90)
+					pan = -90 - (pan + 90); //e.g. convert -120° to -60°
+				pan /= 90f; //to -1..1
+			}
+
+			InstrumentData data = new InstrumentData(baseValues.get1(), baseValues.get2(), null, volume, pan);
+			if (midiChannel != null && midiChannel.equals(10)) {
+				//unpitched instrument
+				ret.add(new UnpitchedInstrument(id, data));
+			}
+			else {
+				//pitched instrument
+				//midi-program is 1-based in MusicXML but 0-based in MIDI
+				int midiProgram = notNull(mxlMidiInstr.getMidiChannel(), 1) - 1; //TODO: find value that matches instrument name
+				midiProgram = MathUtils.clamp(midiProgram, 0, 127);
+				Transpose transpose = readTranspose(instrumentTranspositions.get(id));
+				ret.add(new PitchedInstrument(id, data, midiProgram, transpose, null, null, 0));
+			}
+		}
+		return ret;
 	}
-	
-	
+
 	/**
 	 * Returns the {@link MxlTranspose} of the first measure of the given part,
 	 * or null if there is none.
 	 */
-	private static MxlTranspose findFirstTranspose(MxlPart mxlPart)
-	{
-		if (mxlPart.getMeasures().size() > 0)
-		{
-			MxlMeasure mxlMeasure = mxlPart.getMeasures().getFirst();
-			for (MxlMusicDataContent c : mxlMeasure.getMusicData().getContent())
-			{
-				if (c.getMusicDataContentType() == MxlMusicDataContentType.Attributes)
-				{
+	private static MxlTranspose findFirstTranspose(MxlPart mxlPart) {
+		List<MxlMeasure> mxlMeasures = mxlPart.getMeasures();
+		if (mxlMeasures.size() > 0) {
+			MxlMeasure mxlMeasure = mxlMeasures.get(0);
+			for (MxlMusicDataContent c : mxlMeasure.getMusicData().getContent()) {
+				if (c.getMusicDataContentType() == MxlMusicDataContentType.Attributes) {
 					MxlAttributes a = (MxlAttributes) c;
-					return a.transpose;
+					return a.getTranspose();
 				}
 			}
 		}
 		return null;
 	}
-	
-	
+
 	/**
 	 * Returns the last {@link MxlTranspose} of the given part that can be found
 	 * before the first note that is played by the instrument with the given ID,
 	 * or null if there is none.
 	 */
-	private static MxlTranspose findLastTransposeBeforeFirstNote(MxlPart mxlPart,
-		String instrumentID)
-	{
-		for (MxlMeasure mxlMeasure : mxlPart.getMeasures())
-		{
+	private static MxlTranspose findLastTransposeBeforeFirstNote(MxlPart mxlPart, String instrumentID) {
+		for (MxlMeasure mxlMeasure : mxlPart.getMeasures()) {
 			MxlAttributes lastAttributes = null;
-			for (MxlMusicDataContent c : mxlMeasure.getMusicData().getContent())
-			{
-				if (c.getMusicDataContentType() == MxlMusicDataContentType.Attributes)
-				{
+			for (MxlMusicDataContent c : mxlMeasure.getMusicData().getContent()) {
+				if (c.getMusicDataContentType() == MxlMusicDataContentType.Attributes) {
 					lastAttributes = (MxlAttributes) c;
 				}
-				else if (c.getMusicDataContentType() == MxlMusicDataContentType.Note)
-				{
+				else if (c.getMusicDataContentType() == MxlMusicDataContentType.Note) {
 					MxlNote n = (MxlNote) c;
-					if (n.instrument != null && n.instrument.getID().equals(instrumentID)
-						&& lastAttributes != null)
-						return lastAttributes.transpose;
+					if (n.getInstrument() != null && n.getInstrument().getId().equals(instrumentID) &&
+						lastAttributes != null)
+						return lastAttributes.getTranspose();
 				}
 			}
 		}
 		return null;
 	}
-	
-	
+
 	/**
 	 * Returns the Transpose for the given MxlTranspose, or an instance with
 	 * no transposition if the argument was null.
 	 */
-	private static Transpose readTranspose(MxlTranspose mxlTranspose)
-	{
-		if (mxlTranspose != null)
-		{
-			return new Transpose(
-				mxlTranspose.getChromatic(), mxlTranspose.getDiatonic(),
-				notNull(mxlTranspose.getOctaveChange(), 0), mxlTranspose.getDouble());
+	private static Transpose readTranspose(MxlTranspose mxlTranspose) {
+		if (mxlTranspose != null) {
+			return new Transpose(mxlTranspose.getChromatic(), mxlTranspose.getDiatonic(), notNull(
+				mxlTranspose.getOctaveChange(), 0), mxlTranspose.isDoubleValue());
 		}
-		return Transpose.none();
+		return Transpose.noTranspose;
 	}
-	
 
 }
